--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -8,7 +8,8 @@
     padding 0
     max-width unset
 
-    .hero
+    .hero,
+    .footer
       display none
   
   .navbar
